--- a/index.ipynb
+++ b/index.ipynb
@@ -555,6 +555,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slope_at(x_values, y_values, m, b):\n",
+    "    delta = .001\n",
+    "    base_rss = residual_sum_squares(x_values, y_values, m, b)\n",
+    "    delta_rss = residual_sum_squares(x_values, y_values, m, b + delta)\n",
+    "    numerator = delta_rss - base_rss\n",
+    "    slope = numerator/delta\n",
+    "    return {'b': b, 'slope': slope}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
