--- a/index.ipynb
+++ b/index.ipynb
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,6 +565,17 @@
     "    numerator = delta_rss - base_rss\n",
     "    slope = numerator/delta\n",
     "    return {'b': b, 'slope': slope}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def updated_b(b, learning_rate, cost_curve_slope):\n",
+    "    b += -learning_rate*cost_curve_slope\n",
+    "    return round(b,4)"
    ]
   },
   {
