Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -575,7 +575,7 @@
    "source": [
     "def updated_b(b, learning_rate, cost_curve_slope):\n",
     "    b += -learning_rate*cost_curve_slope\n",
-    "    return round(b,4)"
+    "    return round(b,)"
    ]
   },
   {
