Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,16 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.7797"
+       "6.7797066"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,13 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def updated_b(b, learning_rate, cost_curve_slope):\n",
     "    b += -learning_rate*cost_curve_slope\n",
-    "    return round(b,)"
+    "    return round(b,7)"
    ]
   },
   {
