--- a/index.ipynb
+++ b/index.ipynb
@@ -587,7 +587,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
-    "    pass"
+    "    for i in range(steps)"
    ]
   },
   {
