--- a/index.ipynb
+++ b/index.ipynb
@@ -587,7 +587,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
-    "    for i in range(steps)"
+    "    for _ in range(steps):\n",
+    "        "
    ]
   },
   {
