--- a/index.ipynb
+++ b/index.ipynb
@@ -588,7 +588,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
     "    for _ in range(steps):\n",
-    "        "
+    "        slope_i = slope_at()"
    ]
   },
   {
