--- a/index.ipynb
+++ b/index.ipynb
@@ -587,8 +587,9 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
+    "    \n",
     "    for _ in range(steps):\n",
-    "        slope_i = slope_at(x_values, y_values, m, b)"
+    "        slope_i = slope_at(x_values, y_values, m, b_i)"
    ]
   },
   {
