Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -587,7 +587,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
-    "    \n",
+    "    result_list = []\n",
+    "    result_list.append()\n",
     "    for _ in range(steps):\n",
     "        slope_i = slope_at(x_values, y_values, m, b_i)"
    ]
