--- a/index.ipynb
+++ b/index.ipynb
@@ -588,7 +588,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
     "    result_list = []\n",
-    "    result_dict = {}\n",
+    "    result_dict = {'b': 0, 'rss': 1750.97, 'slope': -412.73}\n",
     "    for _ in range(steps):\n",
     "        slope_i = slope_at(x_values, y_values, m, b_i)"
    ]
