Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -588,7 +588,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
     "    result_list = []\n",
-    "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at()}\n",
+    "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at(x_values, y_values, m, current_b)}\n",
     "    for _ in range(steps):\n",
     "        slope_i = slope_at(x_values, y_values, m, b_i)"
    ]
