--- a/index.ipynb
+++ b/index.ipynb
@@ -580,18 +580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
     "    result_list = []\n",
     "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at(x_values, y_values, m, current_b)['slope']}\n",
-    "    result_list.append(result())\n",
-    "    for _ in range(steps):\n",
-    "        slope_i = slope_at(x_values, y_values, m, b_i)"
+    "    result_list.append(result_dict)\n",
+    "    #for _ in range(steps):\n",
+    "    #    slope_i = slope_at(x_values, y_values, m, b_i)"
    ]
   },
   {
