--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,27 +589,14 @@
     "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at(x_values, y_values, m, current_b)['slope']}\n",
     "    result_list.append(result_dict)\n",
     "    #for _ in range(steps):\n",
-    "    #    slope_i = slope_at(x_values, y_values, m, b_i)\n",
-    "    \n",
-    "    return result_list"
+    "    #    slope_i = slope_at(x_values, y_values, m, b_i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'b': 0, 'rss': 1750.9733241783329, 'slope': -412.73066022858984}]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "descent_steps = gradient_descent(x, y, 15, 0, learning_rate = .005, m = 43)\n",
     "descent_steps\n",
