--- a/index.ipynb
+++ b/index.ipynb
@@ -588,8 +588,8 @@
     "    result_list = []\n",
     "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at(x_values, y_values, m, current_b)['slope']}\n",
     "    result_list.append(result_dict)\n",
-    "    #for _ in range(steps):\n",
-    "    #    slope_i = slope_at(x_values, y_values, m, b_i)\n",
+    "    for _ in range(steps):\n",
+    "        slope_i = slope_at(x_values, y_values, m, b_i)\n",
     "    \n",
     "    return result_list"
    ]
