--- a/index.ipynb
+++ b/index.ipynb
@@ -589,7 +589,8 @@
     "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at(x_values, y_values, m, current_b)['slope']}\n",
     "    result_list.append(result_dict)\n",
     "    for _ in range(steps):\n",
-    "        slope_i = slope_at(x_values, y_values, m, current_b)\n",
+    "        current = slope_at(x_values, y_values, m, current_b)\n",
+    "        \n",
     "    \n",
     "    return result_list"
    ]
