--- a/index.ipynb
+++ b/index.ipynb
@@ -589,7 +589,7 @@
     "    result_dict = {'b': current_b, 'rss': residual_sum_squares(x_values, y_values, m, current_b), 'slope': slope_at(x_values, y_values, m, current_b)['slope']}\n",
     "    result_list.append(result_dict)\n",
     "    for _ in range(steps):\n",
-    "        current_b = slope_at(x_values, y_values, m, current_b)['slope']\n",
+    "        current_b = updated_b(current_slope_at(x_values, y_values, m, current_b)['slope']\n",
     "        \n",
     "    \n",
     "    return result_list"
