--- a/index.ipynb
+++ b/index.ipynb
@@ -590,7 +590,8 @@
     "    result_list.append(result_dict)\n",
     "    for _ in range(steps):\n",
     "        current_b = updated_b(current_b, learning_rate, slope_at(x_values, y_values, m, current_b)['slope'])\n",
-    "        result_dict['b']\n",
+    "        result_dict['b'] = current_b\n",
+    "        result_dict['']\n",
     "        \n",
     "    \n",
     "    return result_list"
