--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,8 @@
     "    for _ in range(steps):\n",
     "        current_b = updated_b(current_b, learning_rate, slope_at(x_values, y_values, m, current_b)['slope'])\n",
     "        result_dict['b'] = current_b\n",
-    "        result_dict['']\n",
+    "        result_dict['rss'] = \n",
+    "        result_dict['sl']\n",
     "        \n",
     "    \n",
     "    return result_list"
