--- a/index.ipynb
+++ b/index.ipynb
@@ -592,7 +592,7 @@
     "        current_b = updated_b(current_b, learning_rate, slope_at(x_values, y_values, m, current_b)['slope'])\n",
     "        result_dict['b'] = current_b\n",
     "        result_dict['rss'] = \n",
-    "        result_dict['slope'] = \n",
+    "        result_dict['slope'] = slope_at(x_values, y_values, m, current_b)['slope']\n",
     "        \n",
     "    \n",
     "    return result_list"
