Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -591,7 +591,7 @@
     "    for _ in range(steps):\n",
     "        current_b = updated_b(current_b, learning_rate, slope_at(x_values, y_values, m, current_b)['slope'])\n",
     "        result_dict['b'] = current_b\n",
-    "        result_dict['rss'] = \n",
+    "        result_dict['rss'] = residual_sum_squares(x_values, y_values, m, current_b)\n",
     "        result_dict['slope'] = slope_at(x_values, y_values, m, current_b)['slope']\n",
     "        \n",
     "    \n",
