--- a/index.ipynb
+++ b/index.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,24 +593,37 @@
     "        result_dict['b'] = current_b\n",
     "        result_dict['rss'] = residual_sum_squares(x_values, y_values, m, current_b)\n",
     "        result_dict['slope'] = slope_at(x_values, y_values, m, current_b)['slope']\n",
-    "        result_list.\n",
-    "        \n",
-    "    \n",
+    "        result_list.append(result_dict)\n",
     "    return result_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'b': 0, 'rss': 1750.9733241783329, 'slope': -412.73066022858984}]"
+       "[{'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
