Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,40 +590,40 @@
     "    result_list.append(result_dict)\n",
     "    for _ in range(steps):\n",
     "        current_b = updated_b(current_b, learning_rate, slope_at(x_values, y_values, m, current_b)['slope'])\n",
-    "        result_dict['b'] = current_b\n",
-    "        result_dict['rss'] = residual_sum_squares(x_values, y_values, m, current_b)\n",
-    "        result_dict['slope'] = slope_at(x_values, y_values, m, current_b)['slope']\n",
-    "        result_list.append(result_dict)\n",
+    "#         result_dict['b'] = current_b\n",
+    "#         result_dict['rss'] = residual_sum_squares(x_values, y_values, m, current_b)\n",
+    "#         result_dict['slope'] = slope_at(x_values, y_values, m, current_b)['slope']\n",
+    "        result_list.append({'b':current_b, 'rss':residual_sum_squares(x_values, y_values, m, current_b), 'slope':slope_at(x_values, y_values, m, current_b)['slope']})\n",
     "    return result_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
-       " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922},\n",
+       "[{'b': 0, 'rss': 1750.9733241783329, 'slope': -412.73066022858984},\n",
+       " {'b': 2.0636533, 'rss': 1026.9383738665676, 'slope': -288.91146222827047},\n",
+       " {'b': 3.5082106, 'rss': 672.1482491218634, 'slope': -202.23802422822246},\n",
+       " {'b': 4.5194007, 'rss': 498.2919880260403, 'slope': -141.56661822846672},\n",
+       " {'b': 5.2272338, 'rss': 413.0960457198319, 'slope': -99.09663222771314},\n",
+       " {'b': 5.722717, 'rss': 371.34557282272203, 'slope': -69.36764022788111},\n",
+       " {'b': 6.0695552, 'rss': 350.8847223111552, 'slope': -48.55734822803015},\n",
+       " {'b': 6.3123419, 'rss': 340.8567218240231, 'slope': -33.99014622789309},\n",
+       " {'b': 6.4822926, 'rss': 335.9414713713785, 'slope': -23.793104227877393},\n",
+       " {'b': 6.6012581, 'rss': 333.5319275710439, 'slope': -16.655174227878433},\n",
+       " {'b': 6.684534, 'rss': 332.3505009361708, 'slope': -11.658620227876781},\n",
+       " {'b': 6.7428271, 'rss': 331.7710775935834, 'slope': -8.16103422789638},\n",
+       " {'b': 6.7836323, 'rss': 331.48679273411216, 'slope': -5.712722227997347},\n",
+       " {'b': 6.8121959, 'rss': 331.347236290828, 'slope': -3.99890622810517},\n",
+       " {'b': 6.8321904, 'rss': 331.2786737261586, 'slope': -2.799236227929214},\n",
        " {'b': 6.8461866, 'rss': 331.2449519784967, 'slope': -1.9594642278661922}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
